ARMTemplates/Networking.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": { 
    "envName": {
      "type": "string",
      "defaultValue": "Qa1",
      "metadata": {
        "description": "Name of the virtual network"
      }
    },
    "envLocation": {
      "type": "string",
      "defaultValue": "East US",
      "metadata": {
        "description": "Name of the virtual network"
      }
    },
    "application": {
      "type": "string",
      "defaultValue": "EUS",
      "metadata": {
        "description": "Name of the virtual network"
      }
    },
    "vnetAddressPrefix": {
      "type": "string",
      "defaultValue": "192.168.0.0/16",
      "metadata": {
        "description": "Name of the virtual network"
      }
    },
    "subnetAddressPrefix": {
      "type": "object",
      "metadata": {
        "description": "Pricing Tier of app service plan"
      }
    }
  },
  "variables": { 
    "vnet": "[concat('vnet','-', 'EUS', '-',parameters('envName'),'-',parameters('application'))]",
    "subnet": {
        "frontend": "[concat('frontendSub-', 'EUS','-', parameters('envName'),'-',parameters('application'))]",
        "backend": "[concat('backendSub','-', 'EUS','-', parameters('envName'),'-',parameters('application'))]",
        "businessTier": "[concat('businessTierSub','-','EUS','-', parameters('envName'),'-',parameters('application'))]",
        "applicationGW": "[concat('applicationGWsub','-','EUS','-', parameters('envName'),'-',parameters('application'))]"
    },
    "networkSecurityGroupName": {
        "frontend": "[concat('frontendNSG','-','EUS','-', parameters('envName'),'-',parameters('application'))]",
        "backend": "[concat('backendNSG','-','EUS','-', parameters('envName'),'-',parameters('application'))]",
        "businessTier": "[concat('businessTierNSG','-','EUS','-', parameters('envName'),'-',parameters('application'))]",
        "applicationGW": "[concat('applicationGWNSG','-','EUS','-', parameters('envName'),'-',parameters('application'))]"
    }
  },
   "resources": [ 
    {
      "comments": "Default Network Security Group for template",
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2019-08-01",
      "tags": {
        "Project": "Vprofile",
        "Environment": "[parameters('envName')]"
      },
      "name": "[variables('networkSecurityGroupName').frontend]",
      "location": "[parameters('envLocation')]",
      "properties": {
        "securityRules": [
          {
            "name": "default-allow-3389",
            "properties": {
              "priority": 1000,
              "access": "Allow",
              "direction": "Inbound",
              "destinationPortRange": "3389",
              "protocol": "Tcp",
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*"
            }
          }
        ]
      }
    },
    {
      "comments": "Default Network Security Group for template",
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2019-08-01",
      "name": "[variables('networkSecurityGroupName').backend]",
      "dependsOn": ["[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroupName').frontend)]"],
      "location": "[parameters('envLocation')]",
      "tags": {
        "Project": "Vprofile",
        "Environment": "[parameters('envName')]"
      },
      "properties": {
        "securityRules": [
          {
            "name": "default-allow-3389",
            "properties": {
              "priority": 1000,
              "access": "Allow",
              "direction": "Inbound",
              "destinationPortRange": "3389",
              "protocol": "Tcp",
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*"
            }
          }
        ]
      }
    },
    {
      "comments": "Default Network Security Group for template",
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2019-08-01",
      "name": "[variables('networkSecurityGroupName').businessTier]",
      "dependsOn": ["[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroupName').backend)]"],
      "location": "[parameters('envLocation')]",
      "tags": {
        "Project": "Vprofile",
        "Environment": "[parameters('envName')]"
      },
      "properties": {
        "securityRules": [
          {
            "name": "default-allow-3389",
            "properties": {
              "priority": 1000,
              "access": "Allow",
              "direction": "Inbound",
              "destinationPortRange": "3389",
              "protocol": "Tcp",
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*"
            }
          }
        ]
      }
    },
    {
      "comments": "Default Network Security Group for template",
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2019-08-01",
      "name": "[variables('networkSecurityGroupName').applicationGW]",
      "dependsOn": ["[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroupName').businessTier)]"],
      "location": "[parameters('envLocation')]",
      "tags": {
        "Project": "Vprofile",
        "Environment": "[parameters('envName')]"
      },
      "properties": {
        "securityRules": [
          {
            "name": "default-allow-3389",
            "properties": {
              "priority": 1000,
              "access": "Allow",
              "direction": "Inbound",
              "destinationPortRange": "3389",
              "protocol": "Tcp",
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*"
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/virtualNetworks",
      "apiVersion": "2017-06-01",
      "name": "[variables('vnet')]",
      "location": "[parameters('envLocation')]",
      "tags": {
        "Project": "Vprofile",
        "Environment": "[parameters('envName')]"
      },
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "[parameters('vnetAddressPrefix')]"
          ]
        }
      }
    },
    {
      "type": "Microsoft.Network/virtualNetworks/subnets",
      "apiVersion": "2017-06-01",
      "name": "[concat(variables('vnet'), '/', variables('subnet').applicationGW)]",
      "dependsOn": ["[resourceId('Microsoft.Network/virtualNetworks/subnets', concat(variables('vnet'), '/', variables('subnet').businessTier))]"],
      "properties": {
          "addressPrefix": "[parameters('subnetAddressPrefix').applicationGW]"
      }
    }
  ],
  "outputs": {  }
}
